adicionando os primeiros arquivos

--- a/index.html
+++ b/index.html
@@ -3,21 +3,31 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Joju Informática</title>
+		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="style.css">
 
 	</head>
 
 	<body>
 		<header>
-			<h1 class="titulo-principal">Joju Informática</h1>
+			<div class="caixa">
+				<h1><img src="jojuinfo.png"></h1>
+
+					<nav>
+						<ul>
+							<li>Home</li>
+							<li>Serviços</li>
+							<li>Contato</li>
+						</ul>
+					</nav>
+			</div>
 		</header>
-		<img id="pcgamer" src="pc gamer.jpg">
+
 			<h2 class="titulo-centralizado">Sobre a Joju Informática</h2>
 
 			<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de computadores e notebooks.</p>
 
 			<p>Nossa missão é: <strong class="missao">Proporcinar facilidade e qualidade nos nossos atendimentos</strong>!</p>
 
-			
 
 	</body>
