--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 
 	<body>
 		<header>
+			<!--<h1><img src="fundao.png"></h1>-->
 			<div class="caixa">
 				<h1><img src="jojuinfo.png"></h1>
 					<nav>
 						<ul>
-							<li>Home</li>
-							<li>Serviços</li>
-							<li>Contato</li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="servicos.html">Serviços</a></li>
+							<li><a href="contato.html">Contato</a></li>
 						</ul>
 					</nav>
 			</div>
