--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 
 	<body>
 		<header>
-			<!--<h1><img src="fundao.png"></h1>-->
 			<div class="caixa">
 				<h1><img src="jojuinfo.png"></h1>
 					<nav>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="servicos.html">Serviços</a></li>
-							<li><a href="contato.html">Contato</a></li>
+							<li>Home</li>
+							<li>Serviços</li>
+							<li>Contato</li>
 						</ul>
 					</nav>
 			</div>
@@ -25,9 +24,10 @@
 
 			<h2 class="titulo-centralizado">Sobre a Joju Informática</h2>
 
-			<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de computadores e notebooks.</p>
+			<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de computadores e notebooks</p>
 
 			<p>Nossa missão é: <strong class="missao">Proporcinar facilidade e qualidade nos nossos atendimentos</strong>!</p>
 			<p>Estou testanto isso</p>
+
 
 	</body>
