--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 			<h2 class="titulo-centralizado">Sobre a Joju Informática</h2>
 
-			<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de computadores e notebooks</p>
+			<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de computadores e notebooks.</p>
 
 			<p>Nossa missão é: <strong class="missao">Proporcinar facilidade e qualidade nos nossos atendimentos</strong>!</p>
 			<p>Estou testanto isso</p>
