--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 			<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de computadores e notebooks.</p>
 
-			<p>Nossa missão é: <strong class="missao">Proporcinar facilidade e qualidade nos nossos atendimentos</strong>!</p>
+			<p>Nossa missão é: <strong class="missao">Proporcinar facilidade e qualidade nos nossos atendimentos.</strong>!</p>
 			<p>Estou testanto isso</p>
 
 
