--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 						<ul>
 							<li>Home</li>
 							<li>Serviços</li>
+							<li>Pães</li>
 							<li>Contato</li>
 						</ul>
 					</nav>
