--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<title>JoJu Informática!</title>
+		<title>JoJu Tech</title>
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="style.css">
 
@@ -14,20 +14,19 @@
 				<h1><img src="jojuinfo.png"></h1>
 					<nav>
 						<ul>
-							<li>Home</li>
-							<li>Serviços</li>
-							<li>Contato</li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="servicos.html">Serviços</a></li>
+							<li><a href="contato.html">Contato</a></li>
 						</ul>
 					</nav>
 			</div>
 		</header>
-
 			<h2 class="titulo-centralizado">Sobre a Joju Informática</h2>
-
-			<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de computadores e notebooks.</p>
-
-			<p>Nossa missão é: <strong class="missao">Proporcinar facilidade e qualidade nos nossos atendimentos.</strong>!</p>
-			<p>Estou testanto isso</p>
+				<div class="sobre">
+					<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de computadores e notebooks.</p>
+					<p id="missao"><em>Nossa missão é: <strong>"Proporcinar facilidade e qualidade nos nossos atendimentos"</strong>.</em></p>
+					<p>Estou testanto isso</p>
+				</div>
 
 
 	</body>
