adicinando ponto final

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<h2 class="titulo-centralizado">Sobre a Joju Informática</h2>
 				<div class="sobre">
 					<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de computadores e notebooks.</p>
-					<p id="missao"><em>Nossa missão é: <strong>"Proporcinar facilidade e qualidade nos nossos atendimentos"</strong>.</em></p>
+					<p id="missao"><em>Nossa missão é: <strong>"Proporcinar facilidade e qualidade nos nossos atendimentos".</strong>.</em></p>
 				</div>
 
 
