Adicionando arquivo JS

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 					<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de computadores e notebooks.</p>
 					<p id="missao"><em>Nossa missão é: <strong>"Proporcinar facilidade e qualidade nos nossos atendimentos"!</strong>.</em></p>
 				</div>
+		
+		<button class="textim">Clique Aqui Para saber mais</button>
 
-
+	<script>src="main.js"</script>
 	</body>
