--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>JoJu Tech</title>
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/style.css">
 
 	</head>
 
@@ -27,7 +27,7 @@
 					<p id="missao"><em>Nossa missão é: <strong>"Proporcinar facilidade e qualidade nos nossos atendimentos"!</strong>.</em></p>
 				</div>
 		
-		<button class="textim">Clique Aqui Para saber mais</button>
+		<button class="textim">Clique aqui</button>
 
 	<script>src="main.js"</script>
 	</body>
