--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<header>
-			<div class="caixa">
+			<section class="caixa">
 				<h1><img src="jojuinfo.png"></h1>
 					<nav>
 						<ul>
@@ -19,15 +19,21 @@
 							<li><a href="contato.html">Contato</a></li>
 						</ul>
 					</nav>
-			</div>
+			</section>
 		</header>
+	<main>
+		<section class="sobre">
 			<h2 class="titulo-centralizado">Sobre a Joju Informática</h2>
-				<div class="sobre">
-					<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de computadores e notebooks.</p>
-					<p id="missao"><em>Nossa missão é: <strong>"Proporcinar facilidade e qualidade nos nossos atendimentos"!</strong>.</em></p>
-				</div>
-		
-		<button class="textim">Clique aqui</button>
+				<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de computadores e notebooks.</p>
+				<p id="missao"><em>Nossa missão é: <strong>"Proporcinar facilidade e qualidade nos nossos atendimentos"!</strong>.</em></p>
+		</section>
+			<button class="textim">Clique aqui</button>
 
-	<script>src="main.js"</script>
+	</main>
+
+	<footer>
+		<img src="jojuinfo.png" alt="]logo-da-Joju-Informática">
+
+	</footer>
+	
 	</body>
