Atualizações no layout

--- a/index.html
+++ b/index.html
@@ -23,17 +23,26 @@
 		</header>
 	<main>
 		<section class="sobre">
-			<h2 class="titulo-centralizado">Sobre a Joju Informática</h2>
-				<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de computadores e notebooks.</p>
+			<!--Para dar dois espaços no html usamos &nbsp-->
+			<h2 class="titulo-principal">Sobre a Joju Informática</h2>
+				<p>Estamos no mercado para oferecer tudo que tem de mais moderno em <strong>manutenção de computadores e notebooks</strong></p>
 				<p id="missao"><em>Nossa missão é: <strong>"Proporcinar facilidade e qualidade nos nossos atendimentos"!</strong>.</em></p>
-		</section>
-			<button class="textim">Clique aqui</button>
+				<p>Somos transparêntes com nossos clientes</p>
 
+				<img class="copiuter" src="so-no-copiuter.jpeg" alt="idoso-telefonando">
+		</section>
+
+		<section class="vantagens">
+			<h3 class="titulo-vantagens">Na Joju você tem vantagens</h3>
+
+		</section>
 	</main>
 
 	<footer>
 		<img src="jojuinfo.png" alt="]logo-da-Joju-Informática">
 
 	</footer>
-	
+
 	</body>
+
+</html>
