Deixando o site mais agradavel aos olhos

--- a/index.html
+++ b/index.html
@@ -22,14 +22,19 @@
 			</section>
 		</header>
 	<main>
+
+		<img class="placa-mae" src="mother.png" alt="Placa mãe impressa">
+
 		<section class="sobre">
 			<!--Para dar dois espaços no html usamos &nbsp-->
 			<h2 class="titulo-principal">Sobre a Joju Informática</h2>
 				<p>Estamos no mercado para oferecer tudo que tem de mais moderno em <strong>manutenção de computadores e notebooks</strong></p>
 				<p id="missao"><em>Nossa missão é: <strong>"Proporcinar facilidade e qualidade nos nossos atendimentos"!</strong>.</em></p>
-				<p>Somos transparêntes com nossos clientes</p>
 
 				<img class="copiuter" src="so-no-copiuter.jpeg" alt="idoso-telefonando">
+				<p class="frase-transparente">Você não terá dúvidas sobre nossos procedimentos!
+				Estamos aqui para resolver!</p>
+
 		</section>
 
 		<section class="vantagens">
