Adicionando imagens e formatando layout

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<header>
 			<section class="caixa">
-				<h1><img src="jojuinfo.png"></h1>
+				<img class="logo" src="jojuinfo.png">
 					<nav>
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -23,28 +23,25 @@
 		</header>
 	<main>
 
-		<img class="placa-mae" src="mother.png" alt="Placa mãe impressa">
-
+		<img class="placa-mae" src="mother.jpg" alt="Placa mãe impressa">
 		<section class="sobre">
 			<!--Para dar dois espaços no html usamos &nbsp-->
-			<h2 class="titulo-principal">Sobre a Joju Informática</h2>
+			<h1 class="titulo-principal">Sobre a Joju Informática</h1>
 				<p>Estamos no mercado para oferecer tudo que tem de mais moderno em <strong>manutenção de computadores e notebooks</strong></p>
-				<p id="missao"><em>Nossa missão é: <strong>"Proporcinar facilidade e qualidade nos nossos atendimentos"!</strong>.</em></p>
-
+				<p class="missao"><em>Nossa missão é: <strong>"Proporcinar facilidade e qualidade nos nossos atendimentos"!</strong>.</em></p>
 				<img class="copiuter" src="so-no-copiuter.jpeg" alt="idoso-telefonando">
-				<p class="frase-transparente">Você não terá dúvidas sobre nossos procedimentos!
-				Estamos aqui para resolver!</p>
-
 		</section>
 
 		<section class="vantagens">
-			<h3 class="titulo-vantagens">Na Joju você tem vantagens</h3>
+			<h2 class="titulo-vantagens">Na Joju você tem vantagens</h2>
+			<p class="frase-transparente">Você não terá dúvidas sobre nossos procedimentos!
+			Estamos aqui para resolver!</p>
 
 		</section>
 	</main>
 
 	<footer>
-		<img src="jojuinfo.png" alt="]logo-da-Joju-Informática">
+		<img src="jojuinfo.png" alt="logo-da-Joju-Informática">
 
 	</footer>
 
