Deixando a página mais organizada e profissional

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 		<title>JoJu Tech</title>
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
 	</head>
 
 	<body>
 		<header>
 			<section class="caixa">
-				<img class="logo" src="jojuinfo.png">
+				<h1><img class="logo" src="jojuinfo.png" alt="logo-da-Joju-Informática"></h1>
 					<nav>
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -21,24 +22,38 @@
 					</nav>
 			</section>
 		</header>
-	<main>
 
-		<img class="placa-mae" src="mother.jpg" alt="Placa mãe impressa">
-		<section class="sobre">
-			<!--Para dar dois espaços no html usamos &nbsp-->
-			<h1 class="titulo-principal">Sobre a Joju Informática</h1>
-				<p>Estamos no mercado para oferecer tudo que tem de mais moderno em <strong>manutenção de computadores e notebooks</strong></p>
-				<p class="missao"><em>Nossa missão é: <strong>"Proporcinar facilidade e qualidade nos nossos atendimentos"!</strong>.</em></p>
-				<img class="copiuter" src="so-no-copiuter.jpeg" alt="idoso-telefonando">
-		</section>
+		<main>
 
-		<section class="vantagens">
-			<h2 class="titulo-vantagens">Na Joju você tem vantagens</h2>
-			<p class="frase-transparente">Você não terá dúvidas sobre nossos procedimentos!
-			Estamos aqui para resolver!</p>
+			<img class="placa-mae" src="mother.jpg" alt="Placa mãe impressa">
 
-		</section>
-	</main>
+			<section class="sobre">
+				<!--Para dar dois espaços no html usamos &nbsp-->
+				<h2 class="titulo-principal">Sobre a Joju Informática</h2>
+
+					<img class="copiuter" src="so-no-copiuter.jpeg" alt="idoso-telefonando">
+
+					<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de <strong>computadores e notebooks</strong></p>
+
+					<p>Nossa missão é: <em>	"Proporcinar facilidade e qualidade nos nossos atendimentos"!</em>.</p>
+
+					<p>Localizado na cidade de José Bonifácio, o polo tecnológico do interior!</p>
+
+			</section>
+
+			<section class="vantagens">
+				<h3 class="titulo-principal">Na JoJu você tem vantagens!!!</h3>
+				<p>Você não terá dúvidas sobre nossos procedimentos!
+				Estamos aqui para resolver!</p>
+
+				<ul>
+					<li class="beneficios"> Rapido!</li>
+					<li class="boneficios"> Com garantia!</li>
+					<li class="beneficios"> Melhor preço!</li>
+				</ul>
+
+			</section>
+		</main>
 
 	<footer>
 		<img src="jojuinfo.png" alt="logo-da-Joju-Informática">
