Trabalhando com o CSS

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 					<img class="copiuter" src="so-no-copiuter.jpeg" alt="idoso-telefonando">
 
-					<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de <strong>computadores e notebooks</strong></p>
+					<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de <strong>computadores e notebooks!</strong> Não se preocupe, vamos resolver qualquer problema!</p>
 
 					<p>Nossa missão é: <em>	"Proporcinar facilidade e qualidade nos nossos atendimentos"!</em>.</p>
 
