Mais mudanças no layout

--- a/index.html
+++ b/index.html
@@ -31,35 +31,41 @@
 				<!--Para dar dois espaços no html usamos &nbsp-->
 				<h2 class="titulo-principal">Sobre a Joju Informática</h2>
 
-					<img class="copiuter" src="so-no-copiuter.jpeg" alt="idoso-telefonando">
+				<img class="pc-case" src="pc-case.jpg" alt="gabinete de pc gamer">
 
 					<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de <strong>computadores e notebooks!</strong> Não se preocupe, vamos resolver qualquer problema!</p>
 
 					<p>Nossa missão é: <em>	"Proporcinar facilidade e qualidade nos nossos atendimentos"!</em>.</p>
 
-					<p>Localizado na cidade de José Bonifácio, o polo tecnológico do interior!</p>
-
 			</section>
 
 			<section class="vantagens">
 				<h3 class="titulo-principal">Na JoJu você tem vantagens!!!</h3>
-				<p>Você não terá dúvidas sobre nossos procedimentos!
-				Estamos aqui para resolver!</p>
 
-				<ul>
-					<li class="beneficios"> Rapido!</li>
-					<li class="boneficios"> Com garantia!</li>
-					<li class="beneficios"> Melhor preço!</li>
-				</ul>
+				<ul class="lista-beneficios">
+					<li class="beneficios"> Rapido</li>
+					<li class="beneficios"> Com garantia</li>
+					<li class="beneficios"> Melhor preço</li>
+					<li class="beneficios"> Profissionais Capacitados</li>
+					<li class="beneficios"> Orçamento sem compromisso</li>
+				</ul><img class="copiuter" src="so-no-copiuter.jpeg" alt="idoso-telefonando">
 
+			</section class="depoimentos">
+				<h4 class="titulo-principal">Veja o depoimento dos nossos clientes</h4>
+
+
+			<section>
+				
 			</section>
 		</main>
 
 	<footer>
-		<img src="jojuinfo.png" alt="logo-da-Joju-Informática">
+		<img class="joju-logo" src="jojuinfo.png" alt="logo-da-Joju-Informática">
 
 	</footer>
 
+	<script src="script.js"></script>
+	
 	</body>
 
 </html>
