--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 				<img class="pc-case" src="pc-case.jpg" alt="gabinete de pc gamer">
 
 					<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de <strong>computadores e notebooks!</strong> Não se preocupe, vamos resolver qualquer problema!</p>
-
 					<p>Nossa missão é: <em>	"Proporcinar facilidade e qualidade nos nossos atendimentos"!</em>.</p>
+					<p>Eferecemos tudo que há de mais moderno na manutenção de computadores e notebook, tudo com muito profissionalismo e ética.</p>
 
 			</section>
 
