--- a/index.html
+++ b/index.html
@@ -50,12 +50,22 @@
 					<li class="beneficios"> Orçamento sem compromisso</li>
 				</ul><img class="copiuter" src="so-no-copiuter.jpeg" alt="idoso-telefonando">
 
-			</section class="depoimentos">
+			</section>
+				
+			<section>
 				<h4 class="titulo-principal">Veja o depoimento dos nossos clientes</h4>
 
+				<img src="css/cliente-senku.jpg" class="clientes">
+				<p>"Senku Ishigami, gênio da ciencia</p>
+				<p>Tenho 10 bilhões por cento de certeza que essa é a melhor loja de informática!</p>
+				<img src="css/cliente-light.jpg" class="clientes">
+				<p>"Light Yagami, estudante"</p>
+				<p>Se essa não é a melhor loja de informática eu não sei qual é!</p>
+				<img src="css/cliente-kirito.jpg" class="clientes">
+				<p>"Kirito, gamer"</p>
+				<p>Arrumaram meu Augma (dispositivo de realidade aumentada) em 30 minutos, parabéns a equipe!</p>
 
-			<section>
-				
+
 			</section>
 		</main>
 
