Alterando layout geral do site

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<section class="caixa">
 				<h1><img class="logo" src="jojuinfo.png" alt="logo-da-Joju-Informática"></h1>
 					<nav>
-						<ul>
+						<ul>	
 							<li><a href="index.html">Home</a></li>
 							<li><a href="servicos.html">Serviços</a></li>
 							<li><a href="contato.html">Contato</a></li>
@@ -25,17 +25,17 @@
 
 		<main>
 
-			<img class="placa-mae" src="mother.jpg" alt="Placa mãe impressa">
+			<img class="carro" src="css/nfs.jpg" alt="Carro de jogo">
 
 			<section class="sobre">
 				<!--Para dar dois espaços no html usamos &nbsp-->
 				<h2 class="titulo-principal">Sobre a Joju Informática</h2>
 
-				<img class="pc-case" src="pc-case.jpg" alt="gabinete de pc gamer">
+				<img class="compiuter" src="so-no-copiuter.jpeg" alt="idoso no computador">
 
-					<p>Estamos no mercado para oferecer tudo que tem de mais moderno em manutenção de <strong>computadores e notebooks!</strong> Não se preocupe, vamos resolver qualquer problema!</p>
-					<p>Nossa missão é: <em>	"Proporcinar facilidade e qualidade nos nossos atendimentos"!</em>.</p>
-					<p>Eferecemos tudo que há de mais moderno na manutenção de computadores e notebook, tudo com muito profissionalismo e ética.</p>
+					<p>Viemos para oferecer o melho em manutenção de computadores!</p>
+					<p>Nossa missão é: <em>	"Oferecer o melhor em manutenção"!</em>.</p>
+					<p>Seu compiuter quebrou? Não se preocupe! A gente resolve.</p>
 
 			</section>
 
@@ -48,23 +48,31 @@
 					<li class="beneficios"> Melhor preço</li>
 					<li class="beneficios"> Profissionais Capacitados</li>
 					<li class="beneficios"> Orçamento sem compromisso</li>
-				</ul><img class="copiuter" src="so-no-copiuter.jpeg" alt="idoso-telefonando">
+				</ul>
 
 			</section>
 				
 			<section>
 				<h4 class="titulo-principal">Veja o depoimento dos nossos clientes</h4>
+					<ul class="lista-clientes">
+						<li>			
+							<p class="nome-cliente">"Senku Ishigami, gênio da ciencia"</p>
+							<img src="css/cliente-senku.jpg" class="clientes">
+							<!--<p>Tenho 10 bilhões por cento de certeza que essa é a melhor loja de informática!</p>-->
+						</li>
 
-				<img src="css/cliente-senku.jpg" class="clientes">
-				<p>"Senku Ishigami, gênio da ciencia</p>
-				<p>Tenho 10 bilhões por cento de certeza que essa é a melhor loja de informática!</p>
-				<img src="css/cliente-light.jpg" class="clientes">
-				<p>"Light Yagami, estudante"</p>
-				<p>Se essa não é a melhor loja de informática eu não sei qual é!</p>
-				<img src="css/cliente-kirito.jpg" class="clientes">
-				<p>"Kirito, gamer"</p>
-				<p>Arrumaram meu Augma (dispositivo de realidade aumentada) em 30 minutos, parabéns a equipe!</p>
+						<li>
+							<p class="nome-cliente">"Light Yagami, estudante"</p>
+							<img src="css/cliente-light.jpg" class="clientes">
+							<!--<p>Se essa não é a melhor loja de informática eu não sei qual é!</p>-->
+						</li>
 
+						<li>	
+							<p class="nome-cliente">"Kirito, gamer"</p>
+							<img src="css/cliente-kirito.jpg" class="clientes">
+							<!--<p>Arrumaram meu Augma muito rápido, parabéns a equipe!</p>-->
+						</li>
+					<ul>
 
 			</section>
 		</main>
